add new files and jwt security